--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script type="text/javascript">
     function load()
     {
-    window.location.href = "http://externalpage.com";
+    window.location.href = "chrome://newtab";
 
     }
     </script>
